--- a/Ted Talk/Ted Talk/View/Base.lproj/Main.storyboard
+++ b/Ted Talk/Ted Talk/View/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="IbG-Iu-Wnl">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="IbG-Iu-Wnl">
                                 <rect key="frame" x="197" y="465" width="20" height="20"/>
                             </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tCg-Or-XUd" userLabel="PlayList">
@@ -99,7 +99,7 @@
                                     </connections>
                                 </searchBar>
                                 <pickerView key="tableFooterView" contentMode="scaleToFill" id="sH5-Bx-5UA">
-                                    <rect key="frame" x="0.0" y="295.5" width="414" height="136"/>
+                                    <rect key="frame" x="0.0" y="296" width="414" height="136"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" systemColor="systemGray2Color"/>
                                     <connections>
